feat: add command system and JSON5 skill manager
- Implement registerable subcommand router in MmoCommand
- Create CastCommand and ReloadCommand inside a dedicated subcommands folder
- Add SkillManager to load JSON5 skill configurations with Jackson Databind
- Create default self_lightning.json5 example skill
- Upgrade config version to 2 and add MigrationStep1To2 to configure features.command-enabled
- Add migration step logging to ConfigMigrator